--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ DEBUG=False
 DB_NAME=staff_transport_db
 DB_USER=Sarunsaji31
 DB_PASSWORD=Sarunsaji21
-DB_HOST=staff-transport-db.cjy2aw6ueb4a.us-east-1.rds.amazonaws.com
+DB_HOST=staff-transport-db.cly2qgua2d3p.me-central-1.rds.amazonaws.com
 DB_PORT=3306
