--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 SECRET_KEY=1100
 DEBUG=True
-DB_NAME=staff_transport_db
-DB_USER=root
-DB_PASSWORD=Sarunsaji21@
+DB_NAME=crew
+DB_USER=sarun
+DB_PASSWORD=S@run@123
 DB_HOST=localhost
 DB_PORT=3306
